--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('./assets/css/satoshi.css');
 
 * {
     font-family: 'Satoshi', sans-serif;
@@ -19,8 +20,8 @@ body {
     font-size: 10px;
     background-color: var(--primary-bg);
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Satoshi', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -53,12 +54,7 @@ h1 {
     padding-top: 100%;
     z-index: 0;
 }
-.section-2 {
-    width: 100%;
-    height: 600px;
-    position: relative;
-    background-color: var(--primary-bg);
-}
+
 .coloured {
     color: #27b0e6;
     background: -webkit-linear-gradient(0.48deg, #75aeff 0.41%, #37b9b1 47.82%, #98d880 95.23%);
@@ -67,7 +63,6 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
-    line-height: 1.3;
 }
 
 .main-block {
